# BeepboxSynthesizer

./: .gitignore  .gitmodules  BeepboxSynthesizer.pck  Cargo.toml  README.md  beepbox_synthesizer.gdextension  beepbox_synthesizer.tres  beepbox_synthetizer.gdextension  default_bus_layout.tres  default_env.tres  export_presets.cfg  import.gd  main.tscn  play_pause.gd  player.gd  project.godot  song1.json  song2.json  song3.json  song4.json  toggle_channel.gd
.github/workflows/: rust-gdextension.yml
src/: js.rs  js_console.rs  lib.rs  main.rs  synthesizer.rs  utils.rs
src/classes/: audio_stream_beep_box.rs  audio_stream_playback_beep_box.rs  mod.rs
src/js_bridge/: audio.rs  context.rs  init.rs  inspector.rs  misc.rs  mod.rs  util.rs
