[package]
name = "beepbox-synthesizer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"] }
once_cell = "1.19.0"
anyhow = "1.0.86"
v8 = "0.92.0"

[features]
default = ["anyhow/backtrace"]
