[package]
name = "beepbox-synthesizer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
rquickjs = { version = "0.6.2", features = ["array-buffer"] }
itertools = "0.13.0"
once_cell = "1.19.0"
anyhow = "1.0.86"

[features]
default = ["anyhow/backtrace"]
